<?xml version="1.0"?>
<package>
  <name>mpu9250_imu_driver</name>
  <version>1.0.0</version>
  <description>The mpu9250_imu_driver package</description>
  <maintainer email="yanagi@soarcloud.com">Tateo Yanagi</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
